agrego proyecto 'datos', y clase accesoDatos

--- a/TPCGrupo8A/TPCGrupo8A.csproj
+++ b/TPCGrupo8A/TPCGrupo8A.csproj
@@ -246,6 +246,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Datos\Datos.csproj">
+      <Project>{d55c1545-e94b-4942-871c-7762939bd457}</Project>
+      <Name>Datos</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
