pantalla RegistroExitoso, validaciones cajas de texto 'Registrarse'

--- a/TPCGrupo8A/TPCGrupo8A.csproj
+++ b/TPCGrupo8A/TPCGrupo8A.csproj
@@ -120,6 +120,7 @@
     <Content Include="Global.asax" />
     <Content Include="IniciarSesion.aspx" />
     <Content Include="productos.aspx" />
+    <Content Include="RegistroExitoso.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -203,6 +204,13 @@
       <DependentUpon>productos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegistroExitoso.aspx.cs">
+      <DependentUpon>RegistroExitoso.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="RegistroExitoso.aspx.designer.cs">
+      <DependentUpon>RegistroExitoso.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
