--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CategoriaNegocio.cs" />
     <Compile Include="MarcaNegocio.cs" />
+    <Compile Include="Producto Negocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioNegocio.cs" />
   </ItemGroup>
