Agregado el front para la vista de FormularioProductosAM, en donde se podran agregar y editar los productos. Funcionalidad de agregar un nuevo producto hecha, faltan que se pueda agregar imagenes a ese producto y las validaciones. Se agregó la clase ImagenNegocio.

--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoriaNegocio.cs" />
+    <Compile Include="ImagenNegocio.cs" />
     <Compile Include="MarcaNegocio.cs" />
     <Compile Include="ProductoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
