Agregadas las clases Carrito y CarritoNEgocio. Completada la clase DetallesProductos y Cree las tablas Carrito y DetallesCarrito en la BD

--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Administrador.cs" />
+    <Compile Include="Carrito.cs" />
     <Compile Include="Categoria.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="DetallePedido.cs" />
