--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CarritoNegocio.cs" />
     <Compile Include="CategoriaNegocio.cs" />
     <Compile Include="EmailServices.cs" />
     <Compile Include="ImagenNegocio.cs" />
