funcionalidad btnAgregarProd al carrito en proceso

--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -51,6 +51,7 @@
     <Compile Include="EmailServices.cs" />
     <Compile Include="ImagenNegocio.cs" />
     <Compile Include="MarcaNegocio.cs" />
+    <Compile Include="PedidoNegocio.cs" />
     <Compile Include="ProductoNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seguridad.cs" />
