Agregado procedimiento para guardar el cliente a la DB y clase ClienteNegocio creada

--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="CarritoNegocio.cs" />
     <Compile Include="CategoriaNegocio.cs" />
+    <Compile Include="ClienteNegocio.cs" />
     <Compile Include="EmailServices.cs" />
     <Compile Include="ImagenNegocio.cs" />
     <Compile Include="MarcaNegocio.cs" />
